[package]
name = "petgraph-wasm"
license = "MIT/Apache-2.0"
version = "0.0.1"
authors = ["Ferris Ellis <3579192+code-ape@users.noreply.github.com>"]
edition = "2018"

description = "WASM port of petgraph, a graph data structure library providing graph types and algorithms."
repository = "https://github.com/urbdyn/petgraph-wasm"

[lib]
name = "petgraph_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
petgraph = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.57"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
